--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
         <button type="button" class="btn btn-success" id="calculateButton">Calculate Price</button>
     </div>
 
+    <div  class="text-center">
+        <h2>Total Price: <span id="TotalPrize">$0</span></h2>
+    </div>
+
 
     <script src="js/main.js"></script>
     
